--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="676062">  <td>24/01/10 19:57:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsTest.GoogleClickByScroll()[pri:3, instance:com.shubham.projects.AppTest.SettingsTest@30c15d8b]">GoogleClickByScroll</td> 
+<tr bgcolor="9ed376">  <td>24/01/10 21:39:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsTest.GoogleClickByScroll()[pri:3, instance:com.shubham.projects.AppTest.SettingsTest@3b35a229]">GoogleClickByScroll</td> 
   <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="676062">  <td>24/01/10 19:57:10</td>   <td>-13885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsTest.SearchTest()[pri:2, instance:com.shubham.projects.AppTest.SettingsTest@30c15d8b]">SearchTest</td> 
+<tr bgcolor="9ed376">  <td>24/01/10 21:39:28</td>   <td>-14659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsTest.SearchTest()[pri:2, instance:com.shubham.projects.AppTest.SettingsTest@3b35a229]">SearchTest</td> 
   <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="676062">  <td>24/01/10 19:57:08</td>   <td>-16301</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsTest.SettingsTitleCheck()[pri:1, instance:com.shubham.projects.AppTest.SettingsTest@30c15d8b]">SettingsTitleCheck</td> 
+<tr bgcolor="9ed376">  <td>24/01/10 21:39:25</td>   <td>-17125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SettingsTest.SettingsTitleCheck()[pri:1, instance:com.shubham.projects.AppTest.SettingsTest@3b35a229]">SettingsTitleCheck</td> 
   <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="74c583">  <td>24/01/10 19:57:33</td>   <td>9110</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.TearDown()[pri:0, instance:com.shubham.projects.AppTest.SettingsTest@30c15d8b]">&lt;&lt;TearDown</td> 
+<tr bgcolor="9f98c4">  <td>24/01/10 21:39:51</td>   <td>8184</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.TearDown()[pri:0, instance:com.shubham.projects.AppTest.SettingsTest@3b35a229]">&lt;&lt;TearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="74c583">  <td>24/01/10 19:57:22</td>   <td>-2344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.preSetup()[pri:0, instance:com.shubham.projects.AppTest.SettingsTest@30c15d8b]">&gt;&gt;preSetup</td> 
+<tr bgcolor="9f98c4">  <td>24/01/10 21:39:40</td>   <td>-2368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.preSetup()[pri:0, instance:com.shubham.projects.AppTest.SettingsTest@3b35a229]">&gt;&gt;preSetup</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="74c583">  <td>24/01/10 19:57:22</td>   <td>-2344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.preSetup()[pri:0, instance:com.shubham.projects.AppTest.SettingsTest@30c15d8b]">&gt;&gt;preSetup</td> 
+<tr bgcolor="9f98c4">  <td>24/01/10 21:39:40</td>   <td>-2368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.preSetup()[pri:0, instance:com.shubham.projects.AppTest.SettingsTest@3b35a229]">&gt;&gt;preSetup</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="74c583">  <td>24/01/10 19:57:22</td>   <td>-2344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.preSetup()[pri:0, instance:com.shubham.projects.AppTest.SettingsTest@30c15d8b]">&gt;&gt;preSetup</td> 
+<tr bgcolor="9f98c4">  <td>24/01/10 21:39:40</td>   <td>-2368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.preSetup()[pri:0, instance:com.shubham.projects.AppTest.SettingsTest@3b35a229]">&gt;&gt;preSetup</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="74c583">  <td>24/01/10 19:56:41</td>   <td>-43097</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.shubham.projects.AppTest.SettingsTest@30c15d8b]">&gt;&gt;setup</td> 
+<tr bgcolor="9f98c4">  <td>24/01/10 21:38:58</td>   <td>-44425</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.shubham.projects.AppTest.SettingsTest@3b35a229]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
 </table>
